# ytweb

./: .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vite.config.ts
backend/: main.py  ytdl.py
backend/templates/: dev.html
src/: App.vue  main.ts
src/components/: DownLoad.vue  MainView.vue
